[package]
name = "sshprivscan"
version = "0.1.0"
edition = "2021"
description = "SSH private key scanner/checker"
license = "GPL-3.0-only"
authors = [ "Joerg Jaspert <joerg@ganneff.de>" ]
readme = "README.md"
repository = "https://github.com/Ganneff/sshprivscan"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
clap-verbosity-flag = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "~0.9.0"
walkdir = "2.3"
jwalk = "0.6"
filemagic = "0.12"
sshkeys = "0.3"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
